--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     Hello there, awesome person!
     <img src="https://avatars.githubusercontent.com/u/102956121?v=4">
     <ul>
-      <li>youtube.com</li>
-      <li>google.com</li>
-      <li>wikipedia.com</li>
-      <li>github.com</li>
-      <li>yahoo.com</li>
+      <li><a href="https://youtube.com">youtube.com</a></li>
+      <li><a href="https://google.com">google.com</a></li>
+      <li><a href="https://wikipedia.com">wikipedia.com</a></li>
+      <li><a href="https://github.com">github.com</a></li>
+      <li><a href="https://yahoo.com">yahoo.com</a></li>
     </ul>
   </body>
   
